--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,11 +66,10 @@ jobs:
           # Configure AWS Credentials
   
       # Configure AWS Credentials
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials from Production account
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::537493486421:role/LabRole
           aws-region: us-east-1
   
       # Create the Elastic Beanstalk application
