--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,13 @@ jobs:
       # Configure AWS Credentials
       - name: Configure AWS credentials from Production account
         uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: arn:aws:iam::537493486421:role/LabRole
+          with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+          role-to-assume: arn:aws:iam::537493486421:role/LabRole
+          role-duration-seconds: 1200
+          role-session-name: MySessionName
   
       # Create the Elastic Beanstalk application
       - name: Create EBS application
