--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,9 +69,9 @@ jobs:
       - name: Configure AWS credentials from Production account
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ASIAX2JI3XNK75C6SJWS
-          aws-secret-access-key: EkmgpsW9IkuSgwkVK8dsqV5dx2yTvqaylLSEpMP
-          aws-region: us-east-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
   
       # Create the Elastic Beanstalk application
       - name: Create EBS application
